# coding_agent

./: .gitignore  README.md  pyproject.toml
src/coding_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  debug.py  history.py  prompts.py  repl.py  tool_parse.py  ui.py
src/coding_agent/tools/: __init__.py  approval.py  base.py  filesystem.py  search.py  shell.py
tests/: conftest.py  test_agent_trim.py  test_cli_input.py  test_debug.py  test_search.py  test_tool_parse.py  test_tools_filesystem.py  test_ui_clock.py
