[project]
name = "coding-agent"
version = "0.1.0"
description = "A minimal Claude-Code-style coding agent CLI for OpenAI-compatible endpoints"
readme = "README.md"
authors = [
    { name = "Erik Laco", email = "erik.laco@seenode.com" }
]
requires-python = ">=3.14"
dependencies = [
    "openai>=2.46.0",
    "rich>=15.0.0",
    "typer>=0.27.0",
]

[project.scripts]
coding-agent = "coding_agent.cli:app"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["coding_agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
packages = ["coding_agent"]
strict = true
warn_unreachable = true
pretty = true
show_error_codes = true
